More detailed information about networks.
